# MRI-Modeling

./: .gitignore  README.md  complex3d.py  creategif.py  main_gui.py  pyproject.toml  requirements.txt  test.py  visualize_volume.py  volume_analysis.py
utils/: complex3d.py  creategif.py  gui_ui.py  heart_volume_analysis.txt  heart_volume_sizes.txt  lung_volume_analysis.txt  lung_volume_sizes.txt  utils.py  visualize_volume_functions.py  volume_analysis.py
utils/Testing/: 20x20x20.stl  20xcyl.stl  20xsphere.stl
