[project]
name = "mri"
version = "0.1.0"
description = "A tool for visualizing and processing MRI data, with capabilities to generate 3D models and export to STL format."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "imageio==2.31.1",
    "matplotlib==3.7.1",
    "nibabel==5.1.0",
    "numpy==1.24.3",
    "pillow==9.5.0",
    "pyqt5==5.15.9",
    "vedo==2023.4.6",
    "vtk==9.2.6",
]
